Fix CC serialization issues when tests run withDebug
^KT-66133